--- a/projeto-k8s-cluster/provisioning/roles/criando-instancias/tasks/provisioning.yml
+++ b/projeto-k8s-cluster/provisioning/roles/criando-instancias/tasks/provisioning.yml
@@ -4,7 +4,7 @@
     name: "{{ sec_group_name }}"
     description: sg giropops
     profile: "{{ profile }}"
-    region: {{region}}
+    region: "{{region}}"
     rules: 
     - proto: tcp
       from_port: 22
@@ -14,7 +14,15 @@
     rules_egress:
     - proto: all
       cidr_ip: 0.0.0.0/0
-    register: basic_firewall
+  register: basic_firewall
+
+
+
+- name: Cirando par de chave para amazon aws
+  ec2_key:
+    name: "{{ keyfile }}"
+    region: "{{ region }}"
+    key_material: "{{key}}"
 
 - name: Criando a instancia EC2  
   local_action: ec2
@@ -23,8 +31,8 @@
     image={{image}}
     profile={{profile}}
     wait=true
-    region={{region}
-    keypair={keypair}}
+    region={{region}}
+    key_name={{keyfile}}
     count={{count}}
   register: ec2  
 
@@ -51,7 +59,7 @@
   local_action: wait_for
     host={{item.public_ip}}
     port=22
-    state= started
+    state=started
   with_items: "{{ec2.instances}}"
 
 - name: Adicionando uma tag na instancia
