--- a/projeto-k8s-cluster/install_k8s/roles/create-cluster/tasks/init-cluster.yml
+++ b/projeto-k8s-cluster/install_k8s/roles/create-cluster/tasks/init-cluster.yml
@@ -5,7 +5,7 @@
 
 - name: Inicializando o cluster k8s
   command:
-    Kubeadm init 
+    kubeadm init 
   register: kubeadm_init
 
 - name: Criando o diretorio .kube
@@ -16,8 +16,8 @@
 - name: Linkando o arquivo admin.conf para o ~/.kube/config
   file:
     src:  /etc/kubernetes/admin.conf
-    dst: ~/.kube/config
-  state: link
+    dest: ~/.kube/config
+    state: link
 
 - name: Configurando o pod network Weavenet
   shell: kubectl apply -f {{default_url_weavenet}}
@@ -26,12 +26,12 @@
 
   
 - name: Pegando o token para adicionar os workers no cluster
-  shell: kubeadm token list | cut -d '' f1 | sed -n '2p'
-  register: K8s_token
+  shell: kubeadm token list | cut -d ' ' -f1  | sed -n '2p'
+  register: k8s_token
 
 
 - name: ca Hash
-  shell: openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt |openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //'
+  shell: openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //'
   register: k8s_master_ca_hash
  
 - name: Adicionando o token e o hask em um dummy host
@@ -41,10 +41,10 @@
     hash: "{{k8s_master_ca_hash.stdout}}"   
 
 - name: 
-    debug:
-      msg: "[MASTER] k8s_token.stdout - O token eh {{hostvars['K8S_TOKEN_HOLDER']['token']}}" 
+  debug:
+    msg: "[MASTER] K8S_TOKEN_HOLDER - O token eh {{hostvars['K8S_TOKEN_HOLDER']['token']}}" 
 
  
 - name:
-    debug:
-      msg: "[MASTER] k8s_token.stdout - O hash eh {{hostvars['K8S_TOKEN_HOLDER']['hash']}}"
+  debug:
+    msg: "[MASTER] k8s_token.stdout - O hash eh {{hostvars['K8S_TOKEN_HOLDER']['hash']}}"
