--- a/projeto-k8s-cluster/install_k8s/main.yml
+++ b/projeto-k8s-cluster/install_k8s/main.yml
@@ -25,3 +25,16 @@
   roles:
   - {role: join-workers, tags: ["join_workers_role"]}
 
+
+- hosts: k8s-master
+  become: yes
+  user: ubuntu
+  roles:
+  - {role: install-helm, tags: ["install_helm3_role"]  }
+
+
+- hosts: k8s-master
+  become: yes
+  user: ubuntu
+  roles:
+  - {role: install-monit-tools, tags: ["install_monit_tools_role"]  }
